<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="horizontal"
        android:clickable="false"
        android:id="@+id/sendingsms_container"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputLayoutMessage"
                    app:counterEnabled="true"
                    app:counterMaxLength="160">
                    <EditText android:id="@+id/txtMessage"
                        android:hint="@string/message"
                        android:inputType="textMultiLine"
                        android:gravity="top|left"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:scrollbars="vertical"
                        android:lines="5"
                        android:maxLength="160"
                        />
                </android.support.design.widget.TextInputLayout>
                <Button android:text="@string/sending"
                    android:id="@+id/butSending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

                <TextView
                    android:id="@+id/txtInfo"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informationSending"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    />

                <TextView
                    android:id="@+id/txtNumberOfCustomers"
                    android:textColor="@color/black"
                    android:textSize="50dp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:id="@+id/txtDesNumberOfCustomers"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NumbreOfCustomers"
                    android:textAlignment="center"
                    />
                <TextView
                    android:id="@+id/lblDescriptionOfFilter"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DescriptionOfFilter"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:id="@+id/txtDescriptionOfFilter"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    />


            </LinearLayout>
        </ScrollView>

    </GridLayout>
</android.support.design.widget.CoordinatorLayout>

