<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="horizontal"
        android:clickable="false"
        android:id="@+id/costumer_detail_container"
        >


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/clientstatus_array"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spclientsatatus"
                    />

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/processstatus_array"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spprocessstatus" />

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/processed_array"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spProcessed">
                </android.support.v7.widget.AppCompatSpinner>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radioButtonGroup"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    >
                    <android.support.v7.widget.AppCompatRadioButton android:id="@+id/radio_womnan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"/>
                    <android.support.v7.widget.AppCompatRadioButton android:id="@+id/radio_men"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/men"/>
                </RadioGroup>

            <Button android:text="@string/generate"
                android:id="@+id/butFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                style="@style/Widget.AppCompat.Button.Colored"/>
            </LinearLayout>
        </ScrollView>

</GridLayout>
</android.support.design.widget.CoordinatorLayout>
